Fix feedback on dataset quickfixes (#26)
* fix(read-more): fix read-more gradient on safari
* fix(summary): fix summary font-size too small
* fix(metadata): add harvesting source
* fix: use bold (700) for subtitle
* feat: hide last update date for harvested dataset
* feat: update truncate length for tags
* fix: update text size for subtitle and tag
* fix: update embed font-size

--- a/theme/less/components/embed.less
+++ b/theme/less/components/embed.less
@@ -38,6 +38,7 @@ See `macros/integrate.html` for common usage. The icon is `svg/copy.svg`.
         padding: @spacing-xs;
         color: @grey-300;
 
+        font-size: @font-size-sm;
         line-height: @spacing-lg;
 
         white-space: nowrap;
