--- a/theme/less/components/read-more.less
+++ b/theme/less/components/read-more.less
@@ -9,7 +9,7 @@
     bottom: 0;
     width: 100%;
     padding-top: 80px;
-    background-image: linear-gradient(to bottom, transparent, var(--gradient-color) 70%, var(--gradient-color));
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), var(--gradient-color) 70%, var(--gradient-color));
     cursor: pointer;
 }
 
