--- a/theme/less/components/summary.less
+++ b/theme/less/components/summary.less
@@ -37,6 +37,7 @@ Summaries allow users to have an overview of content and navigate between page s
 .fr-summary {
     --ol-start: 1.5rem;
     --xl-block: 0.5rem;
+    font-size: @font-size-sm;
 
     .fr-summary__link {
         color: @blue-400;
