--- a/theme/less/components/tags.less
+++ b/theme/less/components/tags.less
@@ -31,7 +31,7 @@ They also come in a bigger size with the `.big` class.
     border-color: @blue-400;
     display: inline-block;
     border-radius: 1.5rem;
-    font-size: @font-size-xs;
+    font-size: @font-size-sm;
     padding: 0.25rem 0.75rem;
     margin-bottom: @spacing-xs;
     margin-right: @spacing-xs;
