--- a/theme/less/content/typography.less
+++ b/theme/less/content/typography.less
@@ -121,6 +121,7 @@ You can specify alignment for text blocks, with responsive capabilities, using `
 @font-weight-light: 300;
 @font-weight-normal: 400;
 @font-weight-bold: 600;
+@font-weight-bold-dsfr: 700;
 
 html, body {
     color: @grey-400;
@@ -226,8 +227,8 @@ small {
 
 .subtitle {
     .text-transform-uppercase;
-    font-size: @font-size-xs;
-    font-weight: @font-weight-bold;
+    font-size: @font-size-sm;
+    font-weight: @font-weight-bold-dsfr;
     line-height: @line-height-xs;
     margin-bottom: 1rem;
 }
